...
              .background(
                  Brush.horizontalGradient(
                      colors =
                          listOf(
                              MaterialTheme.colorScheme.primary,
                              MaterialTheme.colorScheme.secondary)))
              .testTag("bottomNavigationMenu"),
      containerColor = Color.Transparent) {
        tabList.forEach { tab ->
          val isSelected = selectedItem == tab.route
          val animatedColor by
              animateColorAsState(
                  if (isSelected) MaterialTheme.colorScheme.onPrimary
...
